hard-gists/83ff717d87c2559cc6e3/run.log
=== Docker Run Log for 83ff717d87c2559cc6e3 ===
Started at: Mi 29. Okt 17:47:29 CET 2025

[2025-10-29 17:47:29] START: Running container for 83ff717d87c2559cc6e3
[2025-10-29 17:47:29] SUCCESS: Container c9510d185b85a7ed591e4a72f88cd1af75158a087841a7d8e65e6a9603a6896e started for 83ff717d87c2559cc6e3
=== Container logs for 83ff717d87c2559cc6e3 ===
  File "/snippet.py", line 13
    print pc.geterr()
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 83ff717d87c2559cc6e3 ===
[2025-10-29 17:47:32] INFO: Container c9510d185b85a7ed591e4a72f88cd1af75158a087841a7d8e65e6a9603a6896e has stopped
